--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node ./index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
